# smart_calc

src/: Makefile  README.md  s21_calc.h  s21_calculation.c  s21_lexems_parser.c
src/credit_calc/: s21_credit.c  s21_credit.h
src/smart_calc/: CMakeLists.txt  credit.cpp  credit.h  credit.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/struct/: data.h  s21_data.c
src/tests/: s21_tests.h  test.c  test_calc.c  test_credit.c
